# pipebot

./: .gitignore  Containerfile  README.md  pipebot.py  pyproject.toml
.github/workflows/: build.yml
cogs/: __init__.py  avatars.py  github.py  webserver.py
