[project]
name = "pipebot"
version = "0.3.0"
description = "A Discord bot for helping out in a CGI film pipeline"
license = "BSD-3-Clause"
authors = [
    { name = "Scott Milner" },
    { name = "Josseph Wardle" },
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "disnake>=2.11.0",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]
